k8s/bookify/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookify
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: "bookify"

spec:
  rules:
    - http:
        paths:
          - path: /reservations/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: reservations
                port:
                  number: 3004
          - path: /auth/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-http
                port:
                  number: 3003
          - path: /users/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-http
                port:
                  number: 3003
